--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap-trial": "^3.11.0",
     "leaflet": "^1.8.0",
     "loaders.css": "^0.1.2",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-animated-weather": "^4.0.1",
     "react-bootstrap": "^2.5.0",
@@ -26,7 +27,9 @@
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tag-cloud": "^1.3.3",
     "sass": "^1.54.5",
+    "TagCloud": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
