--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap-trial": "^3.11.0",
     "leaflet": "^1.8.0",
     "loaders.css": "^0.1.2",
+    "prop-types": "^15.8.1",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-animated-weather": "^4.0.1",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.2",
     "react-loaders": "^3.0.1",
+    "react-player": "^2.10.1",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
