--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "react-animated-weather": "^4.0.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-images": "^1.2.0-beta.7",
+    "react-images-viewer": "^1.7.1",
     "react-leaflet": "^4.0.2",
     "react-loaders": "^3.0.1",
+    "react-photo-gallery": "^8.0.0",
     "react-player": "^2.10.1",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
